# km_hackaton

./: .gitignore  Arxitektura.md  DEMO_VIDEO.md  LOVABLE_PROMPT.md  PITCH.md  README.md  REFERENCES.md  TEST_REPORT.md  build.py  config.json  detector.py  dimmer.py  ergonomics.py  filter.py  forecast.py  generate_icon.py  generate_mock_data.py  main.py  missing-config.json  notifier.py  posture.db  pyproject.toml  requirements.txt  rules.txt  storage.py  tray.py  visual.py
assets/: icon.icns
src/posture_ai/: main.py
src/posture_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/posture_ai/core/: config.py  ergonomics.py  exercises.py  filter.py  forecast.py  logger.py  session.py
src/posture_ai/database/: storage.py
src/posture_ai/gui/: main_window.py  styles.py  tray.py  tray_icons.py
src/posture_ai/gui/pages/: calibration.py  camera.py  dashboard.py  settings.py
src/posture_ai/os_utils/: audio_helper.py  autostart.py  dimmer.py  notifier.py
src/posture_ai/vision/: camera_worker.py  detector.py  metrics.py  scoring.py  visual.py
tests/: test_detector.py  test_ergonomics.py  test_exercises.py  test_filter.py  test_forecast.py  test_main.py  test_storage.py  test_visual.py
tools/: seed_demo_data.py
