[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "posture-ai"
version = "2.0.0"
description = "AI-powered ergonomic posture monitoring system"
requires-python = ">=3.10"
dependencies = [
    "mediapipe>=0.10.0",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "plyer>=2.1.0",
    "PySide6>=6.6.0",
    "pydantic>=2.4.0",
    "loguru>=0.7.2",
    "gTTS>=2.4.0",
    "pygame>=2.5.2",
]

[project.scripts]
posture-ai = "posture_ai.main:main"

[tool.setuptools.packages.find]
where = ["src"]
